# e

./: .gitignore  .gitmodules  CMakeLists.txt  e.c  e.h
bindings/c++/: e.cpp  e.hpp
camal/: e.camal
examples/: hello_world.c
tests/: e_test_0.c
